--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,28 +1,118 @@
 apply plugin: 'com.android.application'
+//apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'org.greenrobot.greendao'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     defaultConfig {
         applicationId "com.wxb"
         minSdkVersion 15
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+        buildConfigField 'boolean', 'LOG_DEBUG', 'true'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
+            //混淆
             minifyEnabled false
+            //Zipalign优化
+            zipAlignEnabled true
+            // 移除无用的resource文件//true-remove
+            shrinkResources false
+            //加载默认混淆配置文件 progudard-android.txt在sdk目录里面，不用管，proguard.cfg是我们自己配<span></span>的混淆文件
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    greendao {
+        schemaVersion 1
+        daoPackage 'com.wxb.mvp.model.dao'
+        targetGenDir 'src/main/java'
+    }
+
+    packagingOptions {
+        exclude 'META-INF/NOTICE' // will not include NOTICE file
+        exclude 'META-INF/LICENSE' // will not include LICENSE file
+        // as noted by @Vishnuvathsan you may also need to include
+        // variations on the file name. It depends on your dependencies.
+        // Some other common variations on notice and license file names
+        exclude 'META-INF/notice'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license'
+        exclude 'META-INF/license.txt'
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:support-v4:27.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    //dagger start
+    api 'com.google.dagger:dagger:2.11'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
+    //dagger end
+
+    //rxjava start
+    api 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    api 'io.reactivex.rxjava2:rxjava:2.1.2'
+    api 'com.squareup.retrofit2:converter-gson:2.3.0'//gson转换器
+//    api 'com.squareup.retrofit2:adapter-rxjava:2.3.0'//rx适配器
+    api 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    api 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
+    //rxjava end
+
+    //retrofit
+    //api 'com.squareup.retrofit2:retrofit:2.3.0'
+
+    //gson
+    api 'com.google.code.gson:gson:2.8.1'
+    //okhttp
+    api 'com.squareup.okhttp3:okhttp:3.8.1'
+    api 'com.squareup.okhttp3:logging-interceptor:3.8.1'  //logging拦截器
+
+    //stetho--debug调试工具
+    compile 'com.facebook.stetho:stetho-okhttp3:1.3.1@aar'
+    compile 'com.facebook.stetho:stetho:1.5.0'
+
+    //greendao
+    api 'org.greenrobot:greendao:3.2.2' // add library
+    api 'net.zetetic:android-database-sqlcipher:3.5.2'//jiami
+
+    //butterknife
+    api 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    //glide
+    api 'com.github.bumptech.glide:glide:4.0.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
+
+    //eventbus
+    api 'org.greenrobot:eventbus:3.0.0'
+
+    //jlog
+    api 'com.jiongbull:jlog:1.0.6'
+}
+
+repositories {
+    jcenter()
+    maven {
+        url "https://maven.google.com"
+    }
+    maven {
+        url 'https://maven.google.com/'
+        name 'Google'
+    }
+    maven { url "https://jitpack.io" }
 }
