--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'org.greenrobot.greendao'
 
 android {
     compileSdkVersion 27
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.wxb"
         minSdkVersion 16
@@ -52,23 +53,23 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.0.2'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:support-v4:27.0.2'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:support-v4:27.1.1'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    api 'com.android.support:design:27.0.2'
+    api 'com.android.support:design:27.1.1'
 
     //dagger start
-    api 'com.google.dagger:dagger:2.11'
+    api 'com.google.dagger:dagger:2.12'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
     //dagger end
 
     //rxjava start
-    api 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    api 'io.reactivex.rxjava2:rxjava:2.1.2'
+    api 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    api 'io.reactivex.rxjava2:rxjava:2.2.0'
     api 'com.squareup.retrofit2:converter-gson:2.3.0'//gson转换器
 //    api 'com.squareup.retrofit2:adapter-rxjava:2.3.0'//rx适配器
     api 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
@@ -79,10 +80,10 @@ dependencies {
     //api 'com.squareup.retrofit2:retrofit:2.3.0'
 
     //gson
-    api 'com.google.code.gson:gson:2.8.1'
+    api 'com.google.code.gson:gson:2.8.2'
     //okhttp
-    api 'com.squareup.okhttp3:okhttp:3.8.1'
-    api 'com.squareup.okhttp3:logging-interceptor:3.8.1'  //logging拦截器
+    api 'com.squareup.okhttp3:okhttp:3.10.0'
+    api 'com.squareup.okhttp3:logging-interceptor:3.9.0'  //logging拦截器
 
     //stetho--debug调试工具
     compile 'com.facebook.stetho:stetho-okhttp3:1.3.1@aar'
@@ -97,7 +98,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     //glide
-    api 'com.github.bumptech.glide:glide:4.0.0'
+    api 'com.github.bumptech.glide:glide:4.1.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
 
     //eventbus
