--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,6 +106,9 @@ dependencies {
 
     //jlog
     api 'com.jiongbull:jlog:1.0.6'
+
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
+    compile 'com.youth.banner:banner:1.4.10'  //最新版本
 }
 
 repositories {
