--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,7 +57,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".mvp.ui.activity.TestCodeActivity"></activity>
+        <activity android:name=".mvp.ui.activity.TestCodeActivity" />
+        <activity android:name=".mvp.ui.activity.home.TestRecyclerViewActivity"></activity>
     </application>
 
 </manifest>
