添加多baseUrl测试，为组件化做准备

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,12 @@ android {
         exclude 'META-INF/license.txt'
     }
 
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+        disable 'InvalidPackage','MissingTranslation','CheckResult','GoogleAppIndexingWarning'
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
