--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,15 @@
 apply plugin: 'com.android.application'
-//apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'org.greenrobot.greendao'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
     defaultConfig {
         applicationId "com.wxb"
-        minSdkVersion 16
-        targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
+        versionCode rootProject.ext.versionCode
+        versionName rootProject.ext.versionName
         buildConfigField 'boolean', 'LOG_DEBUG', 'true'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -59,37 +58,36 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:support-v4:27.1.1'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    api 'com.android.support:design:27.1.1'
+    testImplementation 'junit:junit:4.12'
+    api rootProject.ext.dependencies["constraint-layout"]
+    api rootProject.ext.dependencies["appcompat-v7"]
+    api rootProject.ext.dependencies["support-v4"]
+    api rootProject.ext.dependencies["design"]
+    api rootProject.ext.dependencies["recyclerview-v7"]
+
 
     //dagger start
-    api 'com.google.dagger:dagger:2.12'
+    api rootProject.ext.dependencies["dagger"]
     annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
     //dagger end
 
     //rxjava start
-    api 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    api 'io.reactivex.rxjava2:rxjava:2.2.0'
-    api 'com.squareup.retrofit2:converter-gson:2.3.0'//gson转换器
-//    api 'com.squareup.retrofit2:adapter-rxjava:2.3.0'//rx适配器
-    api 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-    api 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
+    api rootProject.ext.dependencies["rxjava"]
+    api rootProject.ext.dependencies["rxandroid"]
+    api rootProject.ext.dependencies["converter-gson"]
+    api rootProject.ext.dependencies["retrofit2-rxjava2-adapter"]
+    api rootProject.ext.dependencies["rxbinding"]
     //rxjava end
 
     //retrofit
     //api 'com.squareup.retrofit2:retrofit:2.3.0'
 
     //gson
-    api 'com.google.code.gson:gson:2.8.2'
+    api rootProject.ext.dependencies["gson"]
     //okhttp
-    api 'com.squareup.okhttp3:okhttp:3.10.0'
-    api 'com.squareup.okhttp3:logging-interceptor:3.9.0'  //logging拦截器
+    api rootProject.ext.dependencies["okhttp"]
+    api rootProject.ext.dependencies["logging-interceptor"]  //logging拦截器
 
     //stetho--debug调试工具
     compile 'com.facebook.stetho:stetho-okhttp3:1.3.1@aar'
@@ -108,7 +106,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
 
     //eventbus
-    api 'org.greenrobot:eventbus:3.0.0'
+    api rootProject.ext.dependencies["eventbus"]
 
     //jlog
     api 'com.jiongbull:jlog:1.0.6'
