--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,8 +90,8 @@ dependencies {
     api rootProject.ext.dependencies["logging-interceptor"]  //logging拦截器
 
     //stetho--debug调试工具
-    compile 'com.facebook.stetho:stetho-okhttp3:1.3.1@aar'
-    compile 'com.facebook.stetho:stetho:1.5.0'
+    api 'com.facebook.stetho:stetho-okhttp3:1.3.1@aar'
+    api 'com.facebook.stetho:stetho:1.5.0'
 
     //greendao
     api 'org.greenrobot:greendao:3.2.2' // add library
@@ -102,8 +102,10 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     //glide
-    api 'com.github.bumptech.glide:glide:4.1.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
+    //glide
+//    api 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    api 'com.github.bumptech.glide:okhttp3-integration:4.8.0'
 
     //eventbus
     api rootProject.ext.dependencies["eventbus"]
@@ -111,8 +113,8 @@ dependencies {
     //jlog
     api 'com.jiongbull:jlog:1.0.6'
 
-    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
-    compile 'com.youth.banner:banner:1.4.10'  //最新版本
+    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
+    api 'com.youth.banner:banner:1.4.10'  //最新版本
 }
 
 repositories {
