--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'org.greenrobot.greendao'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -10,27 +9,52 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode rootProject.ext.versionCode
         versionName rootProject.ext.versionName
-        buildConfigField 'boolean', 'LOG_DEBUG', 'true'
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [ moduleName : project.getName() ]
+            }
+        }
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+//    signingConfigs {
+//        release {
+//            keyAlias keystoreProperties['keyAlias']
+//            keyPassword keystoreProperties['keyPassword']
+//            storeFile file(keystoreProperties['storeFile'])
+//            storePassword keystoreProperties['storePassword']
+//        }
+//    }
+
     buildTypes {
         release {
             //混淆
-            minifyEnabled false
+            minifyEnabled true
             //Zipalign优化
             zipAlignEnabled true
             // 移除无用的resource文件//true-remove
-            shrinkResources false
+            shrinkResources true
             //加载默认混淆配置文件 progudard-android.txt在sdk目录里面，不用管，proguard.cfg是我们自己配<span></span>的混淆文件
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            //签名
+//            signingConfig signingConfigs.release
+        }
+
+        debug {
+            //给applicationId添加后缀“.debug”
+            applicationIdSuffix ".debug"
+            zipAlignEnabled false
+            shrinkResources false
+            minifyEnabled false
         }
     }
 
-    greendao {
-        schemaVersion 1
-        daoPackage 'com.wxb.mvp.model.dao'
-        targetGenDir 'src/main/java'
-    }
+//    greendao {
+//        schemaVersion 1
+//        daoPackage 'com.wxb.mvp.model.dao'
+//        targetGenDir 'src/main/java'
+//    }
 
     packagingOptions {
         exclude 'META-INF/NOTICE' // will not include NOTICE file
@@ -57,74 +81,15 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    api fileTree(dir: 'libs', include: ['*.jar'])
 
-    testImplementation 'junit:junit:4.12'
-    api rootProject.ext.dependencies["constraint-layout"]
-    api rootProject.ext.dependencies["appcompat-v7"]
-    api rootProject.ext.dependencies["support-v4"]
-    api rootProject.ext.dependencies["design"]
-    api rootProject.ext.dependencies["recyclerview-v7"]
+    api project(':basiclib')
+    annotationProcessor rootProject.ext.dependencies['dagger-compiler']
+    annotationProcessor rootProject.ext.dependencies['butterknife-compiler']
+    annotationProcessor rootProject.ext.dependencies['glide-compiler']
 
+//    if (!isModule.toBoolean()) {
+//        implementation project(':module_main')
+//    }
 
-    //dagger start
-    api rootProject.ext.dependencies["dagger"]
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
-    //dagger end
-
-    //rxjava start
-    api rootProject.ext.dependencies["rxjava"]
-    api rootProject.ext.dependencies["rxandroid"]
-    api rootProject.ext.dependencies["converter-gson"]
-    api rootProject.ext.dependencies["retrofit2-rxjava2-adapter"]
-    api rootProject.ext.dependencies["rxbinding"]
-    //rxjava end
-
-    //retrofit
-    //api 'com.squareup.retrofit2:retrofit:2.3.0'
-
-    //gson
-    api rootProject.ext.dependencies["gson"]
-    //okhttp
-    api rootProject.ext.dependencies["okhttp"]
-    api rootProject.ext.dependencies["logging-interceptor"]  //logging拦截器
-
-    //stetho--debug调试工具
-    api 'com.facebook.stetho:stetho-okhttp3:1.3.1@aar'
-    api 'com.facebook.stetho:stetho:1.5.0'
-
-    //greendao
-    api 'org.greenrobot:greendao:3.2.2' // add library
-    api 'net.zetetic:android-database-sqlcipher:3.5.2'//jiami
-
-    //butterknife
-    api 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
-    //glide
-    //glide
-//    api 'com.github.bumptech.glide:glide:4.8.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
-    api 'com.github.bumptech.glide:okhttp3-integration:4.8.0'
-
-    //eventbus
-    api rootProject.ext.dependencies["eventbus"]
-
-    //jlog
-    api 'com.jiongbull:jlog:1.0.6'
-
-    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
-    api 'com.youth.banner:banner:1.4.10'  //最新版本
-}
-
-repositories {
-    jcenter()
-    maven {
-        url "https://maven.google.com"
-    }
-    maven {
-        url 'https://maven.google.com/'
-        name 'Google'
-    }
-    maven { url "https://jitpack.io" }
 }
