--- a/config.gradle
+++ b/config.gradle
@@ -5,7 +5,7 @@ ext{
     compileSdkVersion = 28
     versionCode = 1
     versionName = "1.0"
-    
+
     support = "27.1.1"
 
     dependencies = [
@@ -16,16 +16,47 @@ ext{
             "constraint-layout":"com.android.support.constraint:constraint-layout:1.1.3",
             //dagger
             "dagger":"com.google.dagger:dagger:2.12",
+            "dagger-compiler":"com.google.dagger:dagger-compiler:2.11",
             //rxjava
             "rxjava":"io.reactivex.rxjava2:rxjava:2.2.0",
             "rxandroid":"io.reactivex.rxjava2:rxandroid:2.0.2",
             "converter-gson":"com.squareup.retrofit2:converter-gson:2.3.0",
-            "gson":"com.google.code.gson:gson:2.8.2",
             "retrofit2-rxjava2-adapter":"com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0",
             "rxbinding":"com.jakewharton.rxbinding2:rxbinding:2.0.0",
 
+            "gson":"com.google.code.gson:gson:2.8.2",
             "okhttp":"com.squareup.okhttp3:okhttp:3.10.0",
             "logging-interceptor":"com.squareup.okhttp3:logging-interceptor:3.9.0",
-            "eventbus":"org.greenrobot:eventbus:3.0.0"
+            "stetho-okhttp3":"com.facebook.stetho:stetho-okhttp3:1.3.1@aar",
+            "stetho":"com.facebook.stetho:stetho:1.5.0",
+
+            "greendao":"org.greenrobot:greendao:3.2.2",
+            "android-database-sqlcipher":"net.zetetic:android-database-sqlcipher:3.5.2",
+
+            "butterknife":"com.jakewharton:butterknife:8.8.1",
+            "butterknife-compiler":"com.jakewharton:butterknife-compiler:8.8.1",
+
+            "glide-okhttp3-integration":"com.github.bumptech.glide:okhttp3-integration:4.8.0",
+            "glide-compiler":"com.github.bumptech.glide:compiler:4.8.0",
+
+            "eventbus":"org.greenrobot:eventbus:3.0.0",
+
+            "jlog":"com.jiongbull:jlog:1.0.6",
+
+            "BaseRecyclerViewAdapterHelper":"com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30",
+
+            "banner":"com.youth.banner:banner:1.4.10",
+
     ]
 }
+
+//def addRepos(RepositoryHandler handler) {
+//    handler.google()
+//    handler.jcenter()
+//    handler.mavenCentral()
+//    //Add the JitPack repository
+//    handler.maven { url "https://jitpack.io" }
+//    handler.maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+//}
+//
+//ext.addRepos = this.&addRepos
