--- a/basiclib/build.gradle
+++ b/basiclib/build.gradle
@@ -86,4 +86,6 @@ dependencies {
 
     api rootProject.ext.dependencies['BaseRecyclerViewAdapterHelper']
     api rootProject.ext.dependencies['banner']  //最新版本
+
+    api rootProject.ext.dependencies['MPAndroidChart']
 }
