--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,17 +16,21 @@ android {
         }
         buildConfigField 'boolean', 'IS_ALI', 'true'
 
+            // true:检查res资源是否规范
+//        aaptOptions.cruncherEnabled = false
+//        aaptOptions.useNewCruncher = false
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
-//    signingConfigs {
-//        release {
-//            keyAlias keystoreProperties['keyAlias']
-//            keyPassword keystoreProperties['keyPassword']
-//            storeFile file(keystoreProperties['storeFile'])
-//            storePassword keystoreProperties['storePassword']
-//        }
-//    }
+    signingConfigs {
+        release {
+            keyAlias KEY_ALIAS
+            keyPassword KEY_PASSWORD
+            storeFile file(STORE_FILE)
+            storePassword STORE_KEY_PASSWORD
+        }
+    }
 
     buildTypes {
         release {
@@ -39,7 +43,7 @@ android {
             //加载默认混淆配置文件 progudard-android.txt在sdk目录里面，不用管，proguard.cfg是我们自己配<span></span>的混淆文件
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             //签名
-//            signingConfig signingConfigs.release
+            signingConfig signingConfigs.release
         }
 
         debug {
@@ -48,6 +52,8 @@ android {
             zipAlignEnabled false
             shrinkResources false
             minifyEnabled false
+            //签名
+            signingConfig signingConfigs.release
         }
     }
 
