--- a/config.gradle
+++ b/config.gradle
@@ -13,6 +13,7 @@ ext{
             "support-v4" : "com.android.support:support-v4:${support}",
             "design": "com.android.support:design:${support}",
             "recyclerview-v7": "com.android.support:recyclerview-v7:${support}",
+            "annotations":"com.android.support:support-annotations:${support}",
             "constraint-layout":"com.android.support.constraint:constraint-layout:1.1.3",
             //dagger
             "dagger":"com.google.dagger:dagger:2.12",
