gradle 多渠道打包 assets配置

--- a/basiclib/build.gradle
+++ b/basiclib/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     api rootProject.ext.dependencies["converter-gson"]
     api rootProject.ext.dependencies["retrofit2-rxjava2-adapter"]
     api rootProject.ext.dependencies["rxbinding"]
+    api rootProject.ext.dependencies["rxpermissions"]
     //rxjava end
 
     //retrofit
