--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'com.android.application'
 
+def releaseTime() {
+    return new Date().format("yyyyMMdd-HH-mm-ss", TimeZone.getTimeZone("GMT+8"))
+}
+
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
@@ -15,6 +19,7 @@ android {
             }
         }
         buildConfigField 'boolean', 'IS_ALI', 'true'
+        flavorDimensions "default"
 
             // true:检查res资源是否规范
 //        aaptOptions.cruncherEnabled = false
@@ -35,25 +40,28 @@ android {
     buildTypes {
         release {
             //混淆
-            minifyEnabled true
+            minifyEnabled false
             //Zipalign优化
-            zipAlignEnabled true
+            zipAlignEnabled false
             // 移除无用的resource文件//true-remove
-            shrinkResources true
+            shrinkResources false
             //加载默认混淆配置文件 progudard-android.txt在sdk目录里面，不用管，proguard.cfg是我们自己配<span></span>的混淆文件
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             //签名
             signingConfig signingConfigs.release
+//            resValue "string", "app_name", rootProject.ext.app_name
         }
 
         debug {
             //给applicationId添加后缀“.debug”
-            applicationIdSuffix ".debug"
+//            applicationIdSuffix ".debug"
             zipAlignEnabled false
             shrinkResources false
             minifyEnabled false
             //签名
             signingConfig signingConfigs.release
+//            resValue "string", "app_name", rootProject.ext.app_name_dev
+            manifestPlaceholders = [APP_NAME:"MP-debug"]
         }
     }
 
@@ -85,7 +93,58 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    productFlavors {
+        dev{
+//            resValue "string", "app_name", rootProject.ext.app_name_dev
+        }
+
+        tst{
+            applicationIdSuffix ".test"
+//            resValue "string", "app_name", rootProject.ext.app_name_test
+        }
+
+        prod{
+//            resValue "string", "app_name", rootProject.ext.app_name_prod
+        }
+
+        xiaomi{}
+        vivo{}
+        oppo{}
+        baidu{}
+    }
+
+//    android.applicationVariants.all { variant ->
+//        variant.outputs.each { output ->
+//            def outputFile = output.outputFile
+//            if (outputFile != null && outputFile.name.endsWith('.apk')) {
+//                def fileName = outputFile.name.replace("app", "${defaultConfig.applicationId}-${versionName}")
+//                output.outputFile = new File(outputFile.parent, fileName)
+//            }
+//        }
+//    }
+
+    sourceSets {
+        main {
+            assets.srcDirs = ['src/main/assets']
+
+            dev{
+                assets.srcDirs = ['src/main/dev/assets']
+            }
+
+            tst{
+                assets.srcDirs = ['src/main/tst/assets']
+            }
+
+            prod{
+                assets.srcDirs = ['src/main/prod/assets']
+            }
+        }
+    }
+
 }
+
+//test
+apply from: "prebuild.gradle"
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
