--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ android {
             //加载默认混淆配置文件 progudard-android.txt在sdk目录里面，不用管，proguard.cfg是我们自己配<span></span>的混淆文件
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             //签名
-            signingConfig signingConfigs.release
+//            signingConfig signingConfigs.release
 //            resValue "string", "app_name", rootProject.ext.app_name
 
         }
@@ -60,7 +60,7 @@ android {
             shrinkResources false
             minifyEnabled false
             //签名
-            signingConfig signingConfigs.release
+//            signingConfig signingConfigs.release
 //            resValue "string", "app_name", rootProject.ext.app_name_dev
 //            manifestPlaceholders = [APP_NAME: "MP-debug"]
         }
