--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,15 +46,14 @@
         android:name=".app.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        tools:replace="android:icon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-
+        android:theme="@style/AppTheme"
+        tools:replace="android:icon">
         <meta-data
             android:name="channel"
-            android:value="${channel}"/>
+            android:value="${channel}" />
 
         <activity
             android:name=".MainActivity"
@@ -73,7 +72,9 @@
         <activity android:name=".mvp.ui.activity.TestCodeActivity" />
         <activity android:name=".mvp.ui.activity.home.TestRecyclerViewActivity" />
         <activity android:name=".mvp.ui.activity.home.TestAnimActivity" />
-        <activity android:name=".mvp.ui.activity.home.TestChartActivity"/>
+        <activity android:name=".mvp.ui.activity.home.TestChartActivity" />
+        <activity android:name=".mvp.ui.activity.home.TestLineChartActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize" />
     </application>
 
 </manifest>
